# PyMoDAQ

./: .gitignore  .mu_repo  README.rst  pyproject.toml  readthedocs.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: Testbase.yml  Testbase_win.yml  Testp310pyqt5.yml  Testp310pyside2.yml  Testp310pyside6.yml  Testp311pyqt5.yml  Testp311pyqt5_win.yml  Testp311pyside2.yml  Testp311pyside6.yml  Testp312pyside2.yml  Testp312pyside6.yml  Testp38pyqt5.yml  Testp38pyside2.yml  Testp39pyqt5.yml  Testp39pyqt6.yml  Testp39pyside2.yml  Testp39pyside6.yml  python-publish.yml  tests.yml
docs/: automodule.py  requirements.txt
docs/src/: about.rst  conf.py  developer.rst  glossary.rst  index.rst  lab_story.rst  quick_start.rst  user.rst
docs/src/_static/css/: overflow.css
docs/src/_templates/apidoc/: package.rst_t  toc.rst_t
docs/src/api/: api_callable_v4to5.rst  api_doc.rst
docs/src/api/api_callable_v4to5/: callablesfrom4to5.csv
docs/src/api/api_utility_modules/: managers.rst
docs/src/data_management/: data_objects.rst  plotting_data_objects.rst  saving_loading_data.rst
docs/src/developer_folder/: contributing.rst  extension_plugins.rst  instrument_plugins.rst  plugins.rst  whats_new34.rst  whats_new45.rst
docs/src/lab_story/: arduino_ubuntu.rst
docs/src/lab_story_folder/: arduino_ubuntu.rst
docs/src/tutorials/: data_analysis_tutorial.rst  new_plugin.rst  plugin_development.rst  plugin_update_to_v4.rst  write_documentation.rst
docs/src/user_folder/: backup_environments.rst  installation_tips.rst  tcpip.rst
src/pymodaq/: __init__.py  dashboard.py  updater.py
src/pymodaq/control_modules/: daq_move.py  daq_move_ui.py  daq_viewer.py  move_utility_classes.py  utils.py  viewer_utility_classes.py
src/pymodaq/daq_utils/: daq_utils.py
src/pymodaq/examples/: qt_less_standalone_module.py
src/pymodaq/extensions/: daq_scan.py  daq_scan_ui.py
src/pymodaq/extensions/bayesian/: bayesian_optimisation.py
src/pymodaq/extensions/daq_logger/: __init__.py  daq_logger.py
src/pymodaq/extensions/pid/: pid_controller.py  utils.py
src/pymodaq/utils/: chrono_timer.py  daq_utils.py  data.py  enums.py
src/pymodaq/utils/gui_utils/: loader_utils.py  utils.py
src/pymodaq/utils/leco/: daq_move_LECODirector.py  daq_xDviewer_LECODirector.py  director_utils.py  leco_director.py  pymodaq_listener.py  utils.py
src/pymodaq/utils/managers/: overshoot_manager.py  preset_manager.py  (+2 more)
tests/utils/: serializer_test.py
tests/utils/leco/: test_director_utils.py  test_utils.py
tests/utils/managers/: preset_manager_test.py
tests/utils/tcp_ip/: serializer_test.py  tcp_server_client_test.py
(+5 files in other folders)
