[build-system]
requires = ["hatchling>=1.9.0", "hatch-vcs", "toml"]
build-backend = "hatchling.build"

[project]
name = "pymodaq"
dynamic = [
    "version",
]
description = "Modular Data Acquisition with Python"
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Sébastien Weber", email = "sebastien.weber@cemes.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "pymodaq_utils>=0.0.14",
    "pymodaq_gui>=5.0.17",
    "pymodaq_data>=5.0.18",
    "easydict",
    "multipledispatch",
    "numpy < 2.0.0",
    "packaging",
    "pint",
    "pymodaq_plugin_manager>=0.0.17",
    "pymodaq_plugins_mock>=5.0.5",
    "pyqtgraph>=0.12",
    "python-dateutil",
    "qtpy",
    "scipy",
    "setuptools>=60",
    "simple_pid",
    "toml",
    "qtconsole",
    "pyleco>0.3; python_version>=\"3.8\"",
    "bayesian-optimization<2.0.0",
]


[project.optional-dependencies]
dev = [
    "hatch", 
    "flake8",
    "h5py",
    "pytest",
    "pytest-cov",
    "pytest-xdist",

    "pyqt5",
    "pyqt6",
    "pyside6",
    "pytest-qt",
    "pytest-xvfb",
]


[project.scripts]
pymodaq_updater = "pymodaq.updater:main"
daq_logger = "pymodaq.extensions.daq_logger:main"
daq_move = "pymodaq.control_modules.daq_move:main"
daq_scan = "pymodaq.extensions.daq_scan:main"
daq_viewer = "pymodaq.control_modules.daq_viewer:main"
dashboard = "pymodaq.dashboard:main"
h5browser = "pymodaq.extensions.h5browser:main"
parameter_example = "pymodaq.examples.parameter_ex:main"

[project.urls]
Homepage = "http://pymodaq.cnrs.fr"
Source = "https://github.com/PyMoDAQ/PyMoDAQ"
Tracker = "https://github.com/PyMoDAQ/PyMoDAQ/issues"

[tool.hatch.version]
source = "vcs"
fallback-version = '5.0.1'

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.coverage.run]
omit = [
    "*/examples/*",
    "*/resources/*"
]
